[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/blast_spr_9.png" type="Texture" id=1]
[ext_resource path="res://sprites/blast_spr_10.png" type="Texture" id=2]
[ext_resource path="res://sprites/blast_spr_7.png" type="Texture" id=3]
[ext_resource path="res://sprites/blast_spr_12.png" type="Texture" id=4]
[ext_resource path="res://sprites/blast_spr_8.png" type="Texture" id=5]
[ext_resource path="res://sprites/blast_spr_11.png" type="Texture" id=6]
[ext_resource path="res://sprites/blast_spr_4.png" type="Texture" id=7]
[ext_resource path="res://sprites/blast_spr_5.png" type="Texture" id=8]
[ext_resource path="res://sprites/blast_spr_6.png" type="Texture" id=9]
[ext_resource path="res://sprites/blast_spr_1.png" type="Texture" id=10]
[ext_resource path="res://sprites/blast_spr_2.png" type="Texture" id=11]
[ext_resource path="res://sprites/blast_spr_0.png" type="Texture" id=12]
[ext_resource path="res://sprites/blast_spr_3.png" type="Texture" id=13]
[ext_resource path="res://scenes/Blast.gd" type="Script" id=14]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Blast" type="Area2D"]
script = ExtResource( 14 )

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 11
speed_scale = 3.0
playing = true

[connection signal="area_entered" from="." to="." method="_on_Blast_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Blast_body_entered"]
[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
